Fixed z-index issue in main screen

--- a/frontend/src/layouts/main/main.scss
+++ b/frontend/src/layouts/main/main.scss
@@ -1,8 +1,6 @@
 @import '../../styles/index.scss';
 
 .main {
-	position: relative;
-	z-index: 1;
 	margin-top: $header-height;
 	justify-content: center;
 	align-items: center;
